# internal/integration/ogent/ent/schema/user.go
@@ -23,5 +23,7 @@ func (User) Fields() []ent.Field {
 func (User) Edges() []ent.Edge {
 	return []ent.Edge{
 		edge.To("pets", Pet.Type),
+		edge.To("best_friend", User.Type).
+			Unique(),
 	}
 }
